2001-07-30  Braden McDaniel  <braden@endoframe.com>

        * Removed obsolete #undef's in `acconfig.h'.

2001-07-24  Braden McDaniel  <braden@endoframe.com>

        * Added Joerg Scheurich's warbird game to the sample worlds.

2001-07-18  S. K. Bose  <bose@pavan.barc.ernet.in>

        * Win32 GL declarations are taken out from 
          ViewerOpenGL.h and put it into ViewerOpenGL.cpp

2001-07-14  Braden McDaniel  <braden@endoframe.com>

        * Fixed a bug in the JavaScript binding where
          createVrmlFieldFromJsval would create a VrmlSFFloat when it
          should have been creating a VrmlSFTime.

2001-06-30  Braden McDaniel  <braden@endoframe.com>

        * Changed SFRotations to require that their axis component must
          be a unit vector. This change was incompatible with write
          access using operator[]; both read and write access using
          operator[] with VrmlSFRotation has been eliminated.

2001-06-29  Braden McDaniel <braden@endoframe.com>

        * Added ommitted class initializations for the MFString and MFTime
          JavaScript types.

2001-06-25  Braden McDaniel <braden@endoframe.com>

        * Moved ScriptObject's factory method from the static method on
          ScriptObject to a private method of VrmlNodeScript. This
          serves to clean up the ScriptObject interface. In conjunction
          with this change, the JavaScript binding code has been moved
          from `ScriptObject.cpp' to `VrmlNodeScript.cpp'.

2001-06-24  Braden McDaniel <braden@endoframe.com>

        * Added a private header `private.h' for macros used in the
          implementation.

        * Got rid of the pre-linking step for libantlr. Now we just
          import all of libantlr's library objects into the libopenvrml.
          We could be a bit more judicious about this, but libantlr
          needs to be refactored before we can see a significant size
          savings.
